// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`pattern-diagram - Simple shapes pattern 1`] = `
"<div style="
        display: flex;
        flex-wrap: wrap;
        align-items: center;
        justify-content: flex-start;
        gap: 10px;
        width: 400px;
        height: 150px;
        font-family: sans-serif;
    "><div style="
        width: 60px;
        height: 60px;
        display: flex;
        align-items: center;
        justify-content: center;
    "><svg width="60" height="60" viewBox="0 0 60 60" xmlns="http://www.w3.org/2000/svg"><polygon points="30,2 54.248711305964285,43.99999999999999 5.751288694035722,44.00000000000001" fill="#ff6b6b" stroke="#000000" stroke-width="2"/></svg></div><div style="
        width: 60px;
        height: 60px;
        display: flex;
        align-items: center;
        justify-content: center;
    "><svg width="60" height="60" viewBox="0 0 60 60" xmlns="http://www.w3.org/2000/svg"><polygon points="49.798989873223334,49.79898987322333 10.201010126776673,49.798989873223334 10.201010126776666,10.201010126776673 49.79898987322333,10.201010126776666" fill="#4ecdc4" stroke="#000000" stroke-width="2"/></svg></div><div style="
        width: 60px;
        height: 60px;
        display: flex;
        align-items: center;
        justify-content: center;
    "><svg width="60" height="60" viewBox="0 0 60 60" xmlns="http://www.w3.org/2000/svg"><polygon points="30,2 54.248711305964285,43.99999999999999 5.751288694035722,44.00000000000001" fill="#ff6b6b" stroke="#000000" stroke-width="2"/></svg></div><div style="
        width: 60px;
        height: 60px;
        display: flex;
        align-items: center;
        justify-content: center;
    "><svg width="60" height="60" viewBox="0 0 60 60" xmlns="http://www.w3.org/2000/svg"><polygon points="49.798989873223334,49.79898987322333 10.201010126776673,49.798989873223334 10.201010126776666,10.201010126776673 49.79898987322333,10.201010126776666" fill="#4ecdc4" stroke="#000000" stroke-width="2"/></svg></div></div>"
`;

exports[`pattern-diagram - Pattern with placeholders 1`] = `
"<div style="
        display: flex;
        flex-wrap: wrap;
        align-items: center;
        justify-content: flex-start;
        gap: 10px;
        width: 500px;
        height: 150px;
        font-family: sans-serif;
    "><div style="
        width: 60px;
        height: 60px;
        display: flex;
        align-items: center;
        justify-content: center;
    "><svg width="60" height="60" viewBox="0 0 60 60" xmlns="http://www.w3.org/2000/svg"><circle cx="30" cy="30" r="28" fill="#f39c12" stroke="#000000" stroke-width="2"/></svg></div><div style="
        width: 60px;
        height: 60px;
        display: flex;
        align-items: center;
        justify-content: center;
    "><svg width="60" height="60" viewBox="0 0 60 60" xmlns="http://www.w3.org/2000/svg"><polygon points="2,9 58,9 58,51 2,51" fill="#9b59b6" stroke="#000000" stroke-width="2"/></svg></div><div style="
        width: 60px;
        height: 60px;
        display: flex;
        align-items: center;
        justify-content: center;
    
        border: 2px dashed #e0e0e0;
        border-radius: 4px;
        color: #555555;
        font-size: 36px;
        line-height: 1;
    ">?</div><div style="
        width: 60px;
        height: 60px;
        display: flex;
        align-items: center;
        justify-content: center;
    "><svg width="60" height="60" viewBox="0 0 60 60" xmlns="http://www.w3.org/2000/svg"><polygon points="2,9 58,9 58,51 2,51" fill="#9b59b6" stroke="#000000" stroke-width="2"/></svg></div><div style="
        width: 60px;
        height: 60px;
        display: flex;
        align-items: center;
        justify-content: center;
    
        border: 2px dashed #e0e0e0;
        border-radius: 4px;
        color: #555555;
        font-size: 36px;
        line-height: 1;
    ">?</div></div>"
`;

exports[`pattern-diagram - Complex polygon pattern 1`] = `
"<div style="
        display: flex;
        flex-wrap: wrap;
        align-items: center;
        justify-content: flex-start;
        gap: 10px;
        width: 600px;
        height: 120px;
        font-family: sans-serif;
    "><div style="
        width: 50px;
        height: 50px;
        display: flex;
        align-items: center;
        justify-content: center;
    "><svg width="50" height="50" viewBox="0 0 50 50" xmlns="http://www.w3.org/2000/svg"><polygon points="25,2 46.874299874788534,17.89260912937621 38.519060802726884,43.60739087062379 11.48093919727312,43.60739087062379 3.1257001252114662,17.89260912937621" fill="#e74c3c" stroke="#000000" stroke-width="2"/></svg></div><div style="
        width: 50px;
        height: 50px;
        display: flex;
        align-items: center;
        justify-content: center;
    "><svg width="50" height="50" viewBox="0 0 50 50" xmlns="http://www.w3.org/2000/svg"><polygon points="25,2 44.91858428704209,13.5 44.918584287042094,36.5 25,48 5.0814157129579165,36.50000000000001 5.081415712957913,13.499999999999998" fill="#3498db" stroke="#000000" stroke-width="2"/></svg></div><div style="
        width: 50px;
        height: 50px;
        display: flex;
        align-items: center;
        justify-content: center;
    "><svg width="50" height="50" viewBox="0 0 50 50" xmlns="http://www.w3.org/2000/svg"><polygon points="25,2 42.982124096764686,10.65973455724913 47.423341980181945,30.11798148099523 34.97932599970384,45.722283961755636 15.020674000296165,45.722283961755636 2.5766580198180584,30.117981480995233 7.017875903235311,10.659734557249132" fill="#2ecc71" stroke="#000000" stroke-width="2"/></svg></div><div style="
        width: 50px;
        height: 50px;
        display: flex;
        align-items: center;
        justify-content: center;
    "><svg width="50" height="50" viewBox="0 0 50 50" xmlns="http://www.w3.org/2000/svg"><polygon points="25,2 41.2634559672906,8.736544032709407 48,25 41.2634559672906,41.2634559672906 25,48 8.736544032709407,41.2634559672906 2,25.000000000000004 8.736544032709403,8.736544032709407" fill="#f1c40f" stroke="#000000" stroke-width="2"/></svg></div><div style="
        width: 50px;
        height: 50px;
        display: flex;
        align-items: center;
        justify-content: center;
    
        border: 2px dashed #e0e0e0;
        border-radius: 4px;
        color: #555555;
        font-size: 30px;
        line-height: 1;
    ">?</div><div style="
        width: 50px;
        height: 50px;
        display: flex;
        align-items: center;
        justify-content: center;
    "><svg width="50" height="50" viewBox="0 0 50 50" xmlns="http://www.w3.org/2000/svg"><polygon points="25,2 44.91858428704209,13.5 44.918584287042094,36.5 25,48 5.0814157129579165,36.50000000000001 5.081415712957913,13.499999999999998" fill="#3498db" stroke="#000000" stroke-width="2"/></svg></div></div>"
`;

exports[`pattern-diagram - All supported shapes 1`] = `
"<div style="
        display: flex;
        flex-wrap: wrap;
        align-items: center;
        justify-content: flex-start;
        gap: 10px;
        width: 800px;
        height: 200px;
        font-family: sans-serif;
    "><div style="
        width: 70px;
        height: 70px;
        display: flex;
        align-items: center;
        justify-content: center;
    "><svg width="70" height="70" viewBox="0 0 70 70" xmlns="http://www.w3.org/2000/svg"><polygon points="35,3 62.71281292110204,50.99999999999999 7.2871870788979685,51.000000000000014" fill="#ff6b6b" stroke="#000000" stroke-width="2"/></svg></div><div style="
        width: 70px;
        height: 70px;
        display: flex;
        align-items: center;
        justify-content: center;
    "><svg width="70" height="70" viewBox="0 0 70 70" xmlns="http://www.w3.org/2000/svg"><polygon points="57.62741699796952,57.62741699796952 12.372583002030481,57.62741699796952 12.372583002030474,12.372583002030481 57.62741699796952,12.372583002030474" fill="#4ecdc4" stroke="#000000" stroke-width="2"/></svg></div><div style="
        width: 70px;
        height: 70px;
        display: flex;
        align-items: center;
        justify-content: center;
    "><svg width="70" height="70" viewBox="0 0 70 70" xmlns="http://www.w3.org/2000/svg"><polygon points="3,11 67,11 67,59 3,59" fill="#45b7d1" stroke="#000000" stroke-width="2"/></svg></div><div style="
        width: 70px;
        height: 70px;
        display: flex;
        align-items: center;
        justify-content: center;
    "><svg width="70" height="70" viewBox="0 0 70 70" xmlns="http://www.w3.org/2000/svg"><polygon points="35,3 65.43380852144492,25.11145618000168 53.80912807335914,60.88854381999832 16.190871926640863,60.88854381999832 4.5661914785550834,25.11145618000169" fill="#f7dc6f" stroke="#000000" stroke-width="2"/></svg></div><div style="
        width: 70px;
        height: 70px;
        display: flex;
        align-items: center;
        justify-content: center;
    "><svg width="70" height="70" viewBox="0 0 70 70" xmlns="http://www.w3.org/2000/svg"><polygon points="35,3 62.712812921102035,19 62.71281292110204,50.99999999999999 35,67 7.2871870788979685,51.000000000000014 7.287187078897965,18.999999999999996" fill="#bb8fce" stroke="#000000" stroke-width="2"/></svg></div><div style="
        width: 70px;
        height: 70px;
        display: flex;
        align-items: center;
        justify-content: center;
    "><svg width="70" height="70" viewBox="0 0 70 70" xmlns="http://www.w3.org/2000/svg"><polygon points="35,3 60.01860743897696,15.048326340520529 66.19769318981835,42.12066988660206 48.88427965176186,63.83100377287741 21.115720348238142,63.83100377287741 3.802306810181644,42.120669886602066 9.981392561023043,15.048326340520532" fill="#85c1e9" stroke="#000000" stroke-width="2"/></svg></div><div style="
        width: 70px;
        height: 70px;
        display: flex;
        align-items: center;
        justify-content: center;
    "><svg width="70" height="70" viewBox="0 0 70 70" xmlns="http://www.w3.org/2000/svg"><polygon points="35,3 57.62741699796952,12.372583002030481 67,35 57.62741699796952,57.62741699796952 35,67 12.372583002030481,57.62741699796952 3,35.00000000000001 12.372583002030474,12.372583002030481" fill="#f8c471" stroke="#000000" stroke-width="2"/></svg></div><div style="
        width: 70px;
        height: 70px;
        display: flex;
        align-items: center;
        justify-content: center;
    "><svg width="70" height="70" viewBox="0 0 70 70" xmlns="http://www.w3.org/2000/svg"><circle cx="35" cy="35" r="32" fill="#58d68d" stroke="#000000" stroke-width="2"/></svg></div></div>"
`;

exports[`pattern-diagram - Small shapes 1`] = `
"<div style="
        display: flex;
        flex-wrap: wrap;
        align-items: center;
        justify-content: flex-start;
        gap: 10px;
        width: 300px;
        height: 100px;
        font-family: sans-serif;
    "><div style="
        width: 30px;
        height: 30px;
        display: flex;
        align-items: center;
        justify-content: center;
    "><svg width="30" height="30" viewBox="0 0 30 30" xmlns="http://www.w3.org/2000/svg"><polygon points="15,1 27.124355652982143,21.999999999999996 2.875644347017861,22.000000000000004" fill="#e67e22" stroke="#000000" stroke-width="2"/></svg></div><div style="
        width: 30px;
        height: 30px;
        display: flex;
        align-items: center;
        justify-content: center;
    "><svg width="30" height="30" viewBox="0 0 30 30" xmlns="http://www.w3.org/2000/svg"><circle cx="15" cy="15" r="14" fill="#8e44ad" stroke="#000000" stroke-width="2"/></svg></div><div style="
        width: 30px;
        height: 30px;
        display: flex;
        align-items: center;
        justify-content: center;
    
        border: 2px dashed #e0e0e0;
        border-radius: 4px;
        color: #555555;
        font-size: 18px;
        line-height: 1;
    ">?</div><div style="
        width: 30px;
        height: 30px;
        display: flex;
        align-items: center;
        justify-content: center;
    "><svg width="30" height="30" viewBox="0 0 30 30" xmlns="http://www.w3.org/2000/svg"><circle cx="15" cy="15" r="14" fill="#8e44ad" stroke="#000000" stroke-width="2"/></svg></div><div style="
        width: 30px;
        height: 30px;
        display: flex;
        align-items: center;
        justify-content: center;
    "><svg width="30" height="30" viewBox="0 0 30 30" xmlns="http://www.w3.org/2000/svg"><polygon points="15,1 27.124355652982143,21.999999999999996 2.875644347017861,22.000000000000004" fill="#e67e22" stroke="#000000" stroke-width="2"/></svg></div></div>"
`;

exports[`pattern-diagram - Large shapes 1`] = `
"<div style="
        display: flex;
        flex-wrap: wrap;
        align-items: center;
        justify-content: flex-start;
        gap: 10px;
        width: 600px;
        height: 200px;
        font-family: sans-serif;
    "><div style="
        width: 100px;
        height: 100px;
        display: flex;
        align-items: center;
        justify-content: center;
    "><svg width="100" height="100" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><polygon points="82.5269119345812,82.5269119345812 17.473088065418814,82.5269119345812 17.473088065418807,17.473088065418814 82.52691193458118,17.473088065418807" fill="#c0392b" stroke="#000000" stroke-width="2"/></svg></div><div style="
        width: 100px;
        height: 100px;
        display: flex;
        align-items: center;
        justify-content: center;
    
        border: 2px dashed #e0e0e0;
        border-radius: 4px;
        color: #555555;
        font-size: 60px;
        line-height: 1;
    ">?</div><div style="
        width: 100px;
        height: 100px;
        display: flex;
        align-items: center;
        justify-content: center;
    "><svg width="100" height="100" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><polygon points="82.5269119345812,82.5269119345812 17.473088065418814,82.5269119345812 17.473088065418807,17.473088065418814 82.52691193458118,17.473088065418807" fill="#c0392b" stroke="#000000" stroke-width="2"/></svg></div></div>"
`;

exports[`pattern-diagram - Only placeholders 1`] = `
"<div style="
        display: flex;
        flex-wrap: wrap;
        align-items: center;
        justify-content: flex-start;
        gap: 10px;
        width: 300px;
        height: 100px;
        font-family: sans-serif;
    "><div style="
        width: 50px;
        height: 50px;
        display: flex;
        align-items: center;
        justify-content: center;
    
        border: 2px dashed #e0e0e0;
        border-radius: 4px;
        color: #555555;
        font-size: 30px;
        line-height: 1;
    ">?</div><div style="
        width: 50px;
        height: 50px;
        display: flex;
        align-items: center;
        justify-content: center;
    
        border: 2px dashed #e0e0e0;
        border-radius: 4px;
        color: #555555;
        font-size: 30px;
        line-height: 1;
    ">?</div><div style="
        width: 50px;
        height: 50px;
        display: flex;
        align-items: center;
        justify-content: center;
    
        border: 2px dashed #e0e0e0;
        border-radius: 4px;
        color: #555555;
        font-size: 30px;
        line-height: 1;
    ">?</div></div>"
`;

exports[`pattern-diagram - Single shape 1`] = `
"<div style="
        display: flex;
        flex-wrap: wrap;
        align-items: center;
        justify-content: flex-start;
        gap: 10px;
        width: 150px;
        height: 150px;
        font-family: sans-serif;
    "><div style="
        width: 80px;
        height: 80px;
        display: flex;
        align-items: center;
        justify-content: center;
    "><svg width="80" height="80" viewBox="0 0 80 80" xmlns="http://www.w3.org/2000/svg"><polygon points="40,3 72.04293994002423,21.5 72.04293994002424,58.49999999999999 40,77 7.957060059975774,58.500000000000014 7.957060059975774,21.499999999999996" fill="#16a085" stroke="#000000" stroke-width="2"/></svg></div></div>"
`;
